MatchInfo and relations improvements.
- MatchInfo with captures, relations in BLS response. RelationInfo and SpanInfo both implement MatchInfo. RelationInfo is used both during indexing and matching and contains more data (source and target spans, relation type) than SpanInfo, which only represents a span during matching (e.g. a captured group).
- BLS response now includes relations, and Proxy handles them as well.
- Fix SpansInBuckets.setHitQueryContext being skipped.
BLFilterDocsSpans: handle SpansInBuckets properly.
- Separate MatchInfo type INLINE_TAG. Inline tags are indexed as relations, but are kind of a special case.
Their source and target are length 0 and the relation class is a special value, __tag, to avoid problems with "real" relations. It doesn't make sense to report these like relations, so we've made them a separate type that can be handled separately.
- Fixed test failures because inline tags were being reported as relations.
- Update plan-relations (rmatch).
- Improve CorpusQL parser definition: Enable top-level NOT; separate capture and sequencepart in cql.jj.
- Fix relations getting incorrect sorted.
- Fix active relation SpansInBuckets.
- Fix capturing multiple rels of same type.
- Query eq/hashCode. New rel(),rtree().
- Fix tests.
- rtree renamed to rmatch.